Fix overflowing header

--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ main {
 }
 
 .header {
-  width: 100vw;
+  width: 100%;
   position: absolute;
   top: 0;
   display: flex;
